--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,11 @@ coverage.xml
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
+migrations/
+media/
+.idea/
+/.vs
+django_logs/
 
 # Flask stuff:
 instance/
